--- a/problem_5/package.json
+++ b/problem_5/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^16.4.5",
     "eslint": "^9.9.1",
     "globals": "^15.9.0",
+    "http-status-codes": "^2.3.0",
     "nodemon": "^3.1.4",
     "prisma": "^5.19.1",
     "ts-node": "^10.9.2",
