prepared for vercel deployment

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "ihor-bahniuk-be-code-challenge",
   "version": "1.0.0",
   "description": "",
-  "main": "src/app.ts",
+  "main": "api/index.ts",
   "scripts": {
-    "dev": "nodemon src/app.ts",
+    "dev": "nodemon api/index.ts",
     "init": "npx prisma init",
     "migrate": "prisma migrate dev --name",
     "generate": "prisma generate"
