--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "api/index.ts",
   "scripts": {
-    "prisma-vercel": "npm run generate && npm run vercel-build",
+    "postinstall": "prisma generate",
     "dev": "nodemon api/index.ts",
     "init": "npx prisma init",
     "migrate": "prisma migrate dev --name",
