--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon api/index.ts",
     "init": "npx prisma init",
     "migrate": "prisma migrate dev --name",
-    "generate": "prisma generate"
+    "generate": "prisma generate",
+    "vercel-build": "echo hello"
   },
   "repository": {
     "type": "git",
